# src/modules/route.types.ts
@@ -4,6 +4,7 @@ import type { AuthRouterOptions } from "@/modules/auth";
 import type { ApplicationsRouterOptions } from "@/modules/applications";
 import type { BookmarksRouterOptions } from "@/modules/bookmarks";
 import type { HealthRouterOptions } from "@/modules/health";
+import type { InternalRouterOptions } from "@/modules/internal";
 import type { JobsRouterOptions } from "@/modules/jobs";
 import type { PreferencesRouterOptions } from "@/modules/preferences";
 import type { UsersRouterOptions } from "@/modules/users";
@@ -15,6 +16,7 @@ export type RouteOptions = {
   auth?: AuthRouterOptions;
   bookmarks?: BookmarksRouterOptions;
   health?: HealthRouterOptions;
+  internal?: InternalRouterOptions;
   jobs?: JobsRouterOptions;
   preferences?: PreferencesRouterOptions;
   users?: UsersRouterOptions;
